# irc

./: .gitignore  .gitmodules  .luacheckrc  API.md  CMakeLists.txt  LICENSE.txt  README.md  README.txt  SConstruct  TESTED_ON.txt  botcmds.lua  callback.lua  chatcmds.lua  config.lua  description.txt  hooks.lua  init.lua  messages.lua  mod.conf  packmod.bat  packmod.sh  player_part.lua  quick_install.sh  settingtypes.txt  util.lua
.github/workflows/: check-release.yml
Build-i586-mingw32msvc/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/: x-i586-mingw32msvc.cmake
doc/: API.txt  CHANGES.txt  LICENSE.txt  TESTED_ON.txt  TODO.txt
doc/luairc/: README  TODO  index.html
doc/luairc/modules/: callbacks.html  irc.channel.html  irc.constants.html  irc.ctcp.html  irc.dcc.html  irc.debug.html  irc.html  irc.message.html  irc.misc.html
etc/: install.sh  publish.sh  quickinst.sh  zipmod.sh
etc/tests/luairc/: luabot.lua  test.lua
src/: .callback.lua.marks  API.txt  CMakeLists.txt  LICENSE.txt  botcmds.lua  callback.lua  chatcmds.lua  config.lua  friends.lua  hooks.lua  init.lua  messages.lua  player_part.lua  util.lua
src/lua/: CMakeLists.txt  LICENSE.txt
src/luairc/: irc.lua
src/luairc/irc/: channel.lua  constants.lua  ctcp.lua  dcc.lua  debug.lua  message.lua  misc.lua
src/luasocket/: CMakeLists.txt  buffer.c  compat51.c  compat51.h  compat51.lua  ftp.lua  http.lua  ltn12.lua  luasocket.c  luasocket.h  mime.h  mycompat.h  smtp.lua  socket.lua  tp.lua  unix.c  unix.h  url.lua  usocket.c
src/luasocket/tmp/: list
